# haskell-book

./: arith4.hs  casePractice.hs  chapter7.hs  filtering.hs  optionalMonoid.hs  recursion.hs  squareCube.hs
hangman/: hangman.cabal
hangman/src/: Main.hs
testing/: testing.cabal
testing/src/: Main.hs
