name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
homepage:            https://github.com/markj-/hangman
license:             BSD3
license-file:        LICENSE
author:              Mark Jones
maintainer:          example@example.com
copyright:           2018 Mark Jones
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split  
